--- a/.env.example
+++ b/.env.example
@@ -10,8 +10,8 @@ WAVES_SEED='auto deposit have lake easy minute donkey solution okay account util
 WAVES_NODE_URL='https://nodes-testnet.wavesnodes.com'
 WAVES_CHAIN_ID='T'
 
-ORANGE_API_KEY='4c9ffffffffffffffffffffffffffff'
-ORANGE_URL='https://liveobjects.orange-business.com/api/v1'
+SUPPLIER_API_KEY='4c9ffffffffffffffffffffffffffff'
+SUPPLIER_URL='https://liveobjects.orange-business.com/api/v1'
 
 FAUCET_DEVICE='10000000'
 FAUCET_USER='10000000'
