--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,19 @@
-PORT='3000'
+ENABLE_LOGS=true
 
-ADMIN_USERNAME='admin'
-ADMIN_PASSWORD='111111'
+ADMIN_USERNAME=admin
+ADMIN_PASSWORD=111111
 
-JWT_SECRET='aaaa'
-JWT_VALID_TIME='24h'
+JWT_SECRET=aaaa
+JWT_VALID_TIME=24h
 
 WAVES_SEED='auto deposit have lake easy minute donkey solution okay account utility lady unusual actual idle'
-WAVES_NODE_URL='https://nodes-testnet.wavesnodes.com'
-WAVES_CHAIN_ID='T'
+WAVES_NODE_URL=https://nodes-testnet.wavesnodes.com
+WAVES_CHAIN_ID=T
 
-SUPPLIER_API_KEY='4c9ffffffffffffffffffffffffffff'
-SUPPLIER_URL='https://liveobjects.orange-business.com/api/v1'
+SUPPLIER_API_KEY=4c9ffffffffffffffffffffffffffff
+SUPPLIER_URL=https://liveobjects.orange-business.com/api/v1
 
-FAUCET_DEVICE='10000000'
-FAUCET_USER='10000000'
+FAUCET_DEVICE=10000000
+FAUCET_USER=10000000
 
-KEY_MIN_DURATION='3600000'
+KEY_MIN_DURATION=3600000
