updated .env example to use new api url

--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,7 @@ WAVES_NODE_URL=https://nodes-testnet.wavesnodes.com
 WAVES_CHAIN_ID=T
 
 SUPPLIER_API_KEY=4c9ffffffffffffffffffffffffffff
-SUPPLIER_URL=https://liveobjects.orange-business.com/api/v1
+SUPPLIER_URL=https://apitest.orange.pl/smartKeys/v1
 
 FAUCET_DEVICE=10000000
 FAUCET_USER=10000000
