--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
+    "test:watch": "jest --watch --verbose",
+    "test:cov": "jest --coverage --verbose", 
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json",
-    "test:setup": "jest --config ./test/jest-setup.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json --verbose",
+    "test:setup": "jest --config ./test/jest-setup.json --verbose"
   },
   "dependencies": {
     "@nestjs/common": "^7.5.1",
