--- a/.env.example
+++ b/.env.example
@@ -6,11 +6,12 @@ ADMIN_PASSWORD=111111
 JWT_SECRET=aaaa
 JWT_VALID_TIME=24h
 
-WAVES_SEED='auto deposit have lake easy minute donkey solution okay account utility lady unusual actual idle'
-WAVES_NODE_URL=https://nodes-testnet.wavesnodes.com
-WAVES_CHAIN_ID=T
+BLOCKCHAIN_SEED='auto deposit have lake easy minute donkey solution okay account utility lady unusual actual idle'
+BLOCKCHAIN_NODE_URL=https://nodes-testnet.wavesnodes.com
+BLOCKCHAIN_CHAIN_ID=T
 
 FAUCET_DEVICE=10000000
 FAUCET_USER=10000000
 
 KEY_MIN_DURATION=3600000
+KEY_MAX_AMOUNT=50
