Feature/retrieve supplier endpoints

--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,6 @@ FAUCET_USER=10000000
 
 KEY_MIN_DURATION=3600000
 KEY_MAX_AMOUNT=50
+
+SUPPLIER_API_KEY=4c9ffffffffffffffffffffffffffff
+SUPPLIER_URL=https://apitest.orange.pl/smartKeys/v1
