--- a/.env.example
+++ b/.env.example
@@ -16,5 +16,8 @@ FAUCET_USER=10000000
 KEY_MIN_DURATION=3600000
 KEY_MAX_AMOUNT=50
 
+DB_KEY=aaaaaaaaaa
+DB_PATH='./db.sqlite3'
+
 SUPPLIER_API_KEY=4c9ffffffffffffffffffffffffffff
 SUPPLIER_URL=https://apitest.orange.pl/smartKeys/v1
