--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch --verbose",
-    "test:cov": "jest --coverage --verbose", 
+    "test:cov": "jest --coverage --verbose",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json --verbose",
     "test:setup": "jest --config ./test/jest-setup.json --verbose"
@@ -32,10 +32,12 @@
     "@nestjs/passport": "^7.1.5",
     "@nestjs/platform-express": "^7.5.1",
     "@nestjs/swagger": "^4.7.12",
+    "@nestjs/typeorm": "^7.1.5",
     "@types/node-fetch": "^2.5.8",
     "@waves/surfboard": "2.0.0-beta.7",
     "@waves/ts-lib-crypto": "^1.4.3",
     "@waves/waves-transactions": "^4.1.8-beta2",
+    "bcrypt": "^5.0.1",
     "chalk": "^4.1.0",
     "class-transformer": "^0.3.2",
     "class-validator": "^0.13.1",
@@ -48,12 +50,15 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.3",
-    "swagger-ui-express": "^4.1.6"
+    "sqlite3": "^5.0.2",
+    "swagger-ui-express": "^4.1.6",
+    "typeorm": "^0.2.31"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.5.1",
     "@nestjs/schematics": "^7.1.3",
     "@nestjs/testing": "^7.5.1",
+    "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.17.8",
     "@types/jest": "^26.0.15",
     "@types/joi": "^17.2.3",
