added methods for encrypting and decrypting message

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@nestjs/platform-express": "^7.5.1",
     "@nestjs/swagger": "^4.7.12",
     "@nestjs/typeorm": "^7.1.5",
+    "@types/crypto-js": "^4.0.1",
     "@types/node-fetch": "^2.5.8",
     "@waves/surfboard": "2.0.0-beta.7",
     "@waves/ts-lib-crypto": "^1.4.3",
@@ -41,6 +42,7 @@
     "chalk": "^4.1.0",
     "class-transformer": "^0.3.2",
     "class-validator": "^0.13.1",
+    "crypto-js": "^4.0.0",
     "dotenv": "^8.2.0",
     "nest-morgan": "^1.0.1",
     "node-fetch": "^2.6.1",
