--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.3",
-    "skey-lib": "git+ssh://git@gitlab.com/smartkey/smart-key-platform/orange/smartkey-libs.git",
+    "skey-lib": "smartkeyplatform/SmartKey-Libs",
     "sqlite3": "^5.0.2",
     "swagger-ui-express": "^4.1.6",
     "typeorm": "^0.2.31"
