Changed encryption algorithm to use IV

--- a/.env.docker
+++ b/.env.docker
@@ -21,3 +21,4 @@ DB_KEY=triohjiodfgjhoidfghjopidfgjhopdfgjhoidfgh
 DB_PATH=/var/volume/db.sqlite3
 
 ENCRYPTION_SALT=foobarbaz
+ENCRYPTION_IV=0d8fa75738410842
