--- a/.env.example
+++ b/.env.example
@@ -22,3 +22,4 @@ SUPPLIER_API_KEY=4c9ffffffffffffffffffffffffffff
 SUPPLIER_URL=https://apitest.orange.pl/smartKeys/v1
 
 ENCRYPTION_SALT=foobarbaz
+ENCRYPTION_IV=0d8fa75738410842
