--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "test:watch": "jest --watch --verbose",
     "test:cov": "jest --coverage --verbose",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json --verbose --runInBand",
+    "test:e2e": "jest --config ./jest-e2e.json --verbose --runInBand",
     "test:setup": "jest --config ./test/jest-setup.json --verbose"
   },
   "dependencies": {
