Changes in Device model

--- a/.env.example
+++ b/.env.example
@@ -23,3 +23,5 @@ SUPPLIER_URL=https://apitest.orange.pl/smartKeys/v1
 
 ENCRYPTION_SALT=foobarbaz
 ENCRYPTION_IV=0d8fa75738410842
+
+DEVICE_SCHEMA_VERSION='1.0'
