--- a/.env.example
+++ b/.env.example
@@ -18,7 +18,7 @@ KEY_MIN_DURATION=3600000
 DB_KEY=aaaaaaaaaa
 DB_PATH='./db.sqlite3'
 
-# IoT Platform
+# IoT Platform env
 SUPPLIER_API_KEY=4c9ffffffffffffffffffffffffffff
 SUPPLIER_URL=https://apitest.orange.pl/smartKeys/v1
 
