--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,9 @@ ADMIN_PASSWORD=111111
 JWT_SECRET=aaaa
 JWT_VALID_TIME=24h
 
+# https://github.com/expressjs/cors#configuration-options
+CORS_ORIGIN=http://example.com
+
 BLOCKCHAIN_SEED='auto deposit have lake easy minute donkey solution okay account utility lady unusual actual idle'
 BLOCKCHAIN_NODE_URL=https://nodes-testnet.wavesnodes.com
 BLOCKCHAIN_CHAIN_ID=T
