change endpoint name

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-ENABLE_LOGS=true
+LOG_LEVEL=debug
 
 ADMIN_USERNAME=admin
 ADMIN_PASSWORD=111111
@@ -6,14 +6,26 @@ ADMIN_PASSWORD=111111
 JWT_SECRET=aaaa
 JWT_VALID_TIME=24h
 
-WAVES_SEED='auto deposit have lake easy minute donkey solution okay account utility lady unusual actual idle'
-WAVES_NODE_URL=https://nodes-testnet.wavesnodes.com
-WAVES_CHAIN_ID=T
+# https://github.com/expressjs/cors#configuration-options
+CORS_ORIGIN=http://example.com
 
-SUPPLIER_API_KEY=4c9ffffffffffffffffffffffffffff
-SUPPLIER_URL=https://liveobjects.orange-business.com/api/v1
+BLOCKCHAIN_SEED='auto deposit have lake easy minute donkey solution okay account utility lady unusual actual idle'
+BLOCKCHAIN_NODE_URL=https://nodes-testnet.wavesnodes.com
+BLOCKCHAIN_CHAIN_ID=T
 
 FAUCET_DEVICE=10000000
 FAUCET_USER=10000000
 
 KEY_MIN_DURATION=3600000
+
+DB_KEY=aaaaaaaaaa
+DB_PATH='./db.sqlite3'
+
+# IoT Platform env
+SUPPLIER_API_KEY=4c9ffffffffffffffffffffffffffff
+SUPPLIER_URL=https://apitest.orange.pl/smartKeys/v1
+
+ENCRYPTION_SALT=foobarbaz
+ENCRYPTION_IV=0d8fa75738410842
+
+DEVICE_SCHEMA_VERSION='1.0'
